--- a/build.gradle
+++ b/build.gradle
@@ -37,13 +37,14 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// for Application Architecture
-	//    - required: ulid, lombok, validation
+	//    - required: ulid, lombok, validation, poi
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'com.github.f4b6a3:ulid-creator:5.2.3'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'commons-io:commons-io:2.19.0'
 	implementation 'org.aspectj:aspectjweaver:1.9.24'
+	implementation 'org.apache.poi:poi-ooxml:5.4.1'
 	//    - optional: docker, p6spy
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.12.0'
